# eridu

./: .gitignore  CLAUDE.md  Clusters.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fix_optimizations.md  lambda.sh  pyproject.toml  workflow.yml
.claude/: settings.json
.claude/commands/: optimize.md  simplify.md
eridu/: analyze_checks_errors.py  utils.py
eridu/cli/: main.py
eridu/cluster/: __init__.py  bert.py  embedding.py  neobert.py
eridu/etl/: acronyms.py  analyze.py  augment.py  checks_evaluation.py  cleanco.py  cluster.py  cluster_split.py  compare.py  disco.py  enhanced_evaluation_report.py  error_category_analysis.py  evaluate.py  filter.py  report.py
eridu/train/: callbacks.py  fine_tune_sbert.py  loss.py  utils.py
notebooks/: Fine-Tune-Eridu-Model.ipynb
tests/: test_cluster_pairs.py
tests/etl/: test_acronyms.py
tests/train/: test_loss.py
